--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
+Django==3.0.6
 asgiref==3.2.7
 click==7.1.2
-Django==3.0.6
+django-settings-model==0.6.0
+gunicorn==20.0.4
+pip==20.1.1
 pip-tools==5.2.0
 pytz==2020.1
+setuptools==47.1.0
 six==1.15.0
 sqlparse==0.3.1
+wheel==0.34.2
